Adding meta tags to head

--- a/demo.html
+++ b/demo.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alina Thermomix - Book a Interactive Thermomix Cooking Demo</title>
+  <meta name="description" content="Experience the Thermomix in action with our interactive demo. See how Alina guides you through recipes step-by-step.">
+  <meta name="keywords" content="Thermomix demo, cooking demo, recipe demo, interactive Thermomix guide">
+  <meta property="og:title" content="Alina Thermomix - Interactive Demo">
+  <meta property="og:description" content="Try our interactive demo and see how easy it is to cook with Thermomix!">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/style.css">
-  <title>Book a Thermomix Cooking Demo</title>
 </head>
 
 <body>
@@ -82,7 +86,7 @@
               </p>
               <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
                 investment and enjoy a rewarding culinary journey! <br><br>
-                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and
+                Join me, <a href="/about_me.html" class="cooking-demo">Your Thermomix Advisor</a> for a cooking demo and
                 discover how the Thermomix can transform your cooking experience today!
               </p>
             </div>
@@ -272,8 +276,10 @@
     <!-- Footter links  -->
     <div class="footer-links">
       <a href="index.html">Home</a> |
+      <a href="demo.html">Book a Demo</a> |
       <a href="buy_thermomix.html">Buy Thermomix</a> |
-      <a href="contact.html">Contact</a>
+      <a href="about_me.html">About Me</a> |
+      <a href="contact.html">Contact</a> 
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
