--- a/about_me.html
+++ b/about_me.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Alina - Meet Your Thermomix Guide</title>
+  <meta name="description" content="Learn more about Alina, your culinary companion and expert in Thermomix recipes and tips.">
+  <meta name="keywords" content="About Alina, Thermomix expert, recipe guide, cooking instructor">
+  <meta property="og:title" content="About Alina - Your Thermomix Recipe Expert">
+  <meta property="og:description" content="Discover Alina's journey with Thermomix and her passion for helping you create amazing recipes.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/style.css">
-  <title>About Alina Thermomix Advisor </title>
 </head>
 
 <header>
@@ -249,11 +253,13 @@
       </a>
     </div>
   </section>
-
+<!-- Footer -->
   <div class="footer-links">
     <a href="index.html">Home</a> |
     <a href="demo.html">Book a Demo</a> |
-    <a href="buy_thermomix.html">Buy Thermomix</a>
+    <a href="buy_thermomix.html">Buy Thermomix</a> |
+    <a href="about_me.html">About Me</a> |
+    <a href="contact.html">Contact</a> 
   </div>
   <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
 </footer>
