--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buy Thermomix - Alina's Recommended Kitchen Companion</title>
+    <meta name="description" content="Ready to elevate your cooking? Purchase the Thermomix through Alina's guide and start creating delicious meals at home.">
+    <meta name="keywords" content="buy Thermomix, Thermomix purchase, kitchen appliance, Alina Thermomix">
+    <meta property="og:title" content="Buy Thermomix - Alina's Recommended Choice">
+    <meta property="og:description" content="Get your Thermomix through Alina and enjoy an advanced cooking experience.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
-    <title>How to buy Thermomix </title>
 </head>
 
 <body>
@@ -318,6 +322,8 @@
         <div class="footer-links">
             <a href="index.html">Home</a> |
             <a href="demo.html">Book a Demo</a> |
+            <a href="buy_thermomix.html">Buy Thermomix</a> |
+            <a href="about_me.html">About Me</a> |
             <a href="contact.html">Contact</a>
         </div>
         <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
