--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Alina - Reach Out for Thermomix Support</title>
+  <meta name="description" content="Have questions? Contact Alina for support with Thermomix recipes, tips, or inquiries.">
+  <meta name="keywords" content="contact Alina, Thermomix support, recipe inquiries, cooking help">
+  <meta property="og:title" content="Contact Alina - Thermomix Support and Inquiries">
+  <meta property="og:description" content="Reach out to Alina for any questions about Thermomix, recipes, or assistance.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="static/css/style.css">
-  <title>Contact</title>
 </head>
 
 <body>
@@ -225,11 +229,13 @@
         </a>
       </div>
     </section>
-
+<!-- Footer -->
     <div class="footer-links">
       <a href="index.html">Home</a> |
       <a href="demo.html">Book a Demo</a> |
-      <a href="buy_thermomix.html">Buy Thermomix</a>
+      <a href="buy_thermomix.html">Buy Thermomix</a> |
+      <a href="about_me.html">About Me</a> |
+      <a href="contact.html">Contact</a> 
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
