--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alina Thermomix - Your Guide to Delicious Recipes</title>
+  <meta name="description" content="Explore a world of Thermomix recipes with Alina. Access easy-to-follow guides, tips, and mouth-watering recipes for every meal.">
+  <meta name="keywords" content="Thermomix, recipes, cooking, meal preparation, Alina, Thermomix app, easy recipes, culinary guide">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Alina Thermomix - Your Guide to Delicious Recipes">
+  <meta property="og:description" content="Discover a variety of Thermomix recipes with step-by-step guides for delicious meals with Alina Thermomix.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="static/css/style.css">
-  <title>Alina Official Thermomix Advisor</title>
 </head>
 
 <body>
@@ -34,8 +39,8 @@
             <li class="nav-item">
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
-            <li class="nav-item"></li>
-            <a class="nav-link" href="about_me.html">About Me</a>
+            <li class="nav-item">
+              <a class="nav-link" href="about_me.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -117,7 +122,7 @@
                 <p>
                   It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve
                   nutrition, and enjoy stress-free meal preparation. <br>
-                  <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
+                  <em class="cooking-demo">Only available to purchase through a <a href="about_me.html" class="cooking-demo"> Thermomix® Advisor</a></em>
                 </p>
                 <a class="btn btn-success mb-5" href="demo.html">Book a Demo</a>
               </div>
@@ -264,11 +269,12 @@
         </a>
       </div>
     </section>
-
     <div class="footer-links">
-      <a href="demo.html">Book Demo</a> |
+      <a href="index.html">Home</a> |
+      <a href="demo.html">Book a Demo</a> |
       <a href="buy_thermomix.html">Buy Thermomix</a> |
-      <a href="contact.html">Contact</a>
+      <a href="about_me.html">About Me</a> |
+      <a href="contact.html">Contact</a> 
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
