--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alina Thermomix - Your Guide to Delicious Recipes</title>
-  <meta name="description" content="Explore a world of Thermomix recipes with Alina. Access easy-to-follow guides, tips, and mouth-watering recipes for every meal.">
-  <meta name="keywords" content="Thermomix, recipes, cooking, meal preparation, Alina, Thermomix app, easy recipes, culinary guide">
+  <meta name="description"
+    content="Explore a world of Thermomix recipes with Alina. Access easy-to-follow guides, tips, and mouth-watering recipes for every meal.">
+  <meta name="keywords"
+    content="Thermomix, recipes, cooking, meal preparation, Alina, Thermomix app, easy recipes, culinary guide">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Alina Thermomix - Your Guide to Delicious Recipes">
-  <meta property="og:description" content="Discover a variety of Thermomix recipes with step-by-step guides for delicious meals with Alina Thermomix.">
+  <meta property="og:description"
+    content="Discover a variety of Thermomix recipes with step-by-step guides for delicious meals with Alina Thermomix.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -122,7 +125,8 @@
                 <p>
                   It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve
                   nutrition, and enjoy stress-free meal preparation. <br>
-                  <em class="cooking-demo">Only available to purchase through a <a href="about_me.html" class="cooking-demo"> Thermomix® Advisor</a></em>
+                  <em class="cooking-demo">Only available to purchase through a <a href="about_me.html"
+                      class="cooking-demo"> Thermomix® Advisor</a></em>
                 </p>
                 <a class="btn btn-success mb-5" href="demo.html">Book a Demo</a>
               </div>
@@ -174,21 +178,36 @@
                 <div class="row">
                   <div class="col-md-6 d-flex js-scroll slide-left">
                     <p>
-                      Ai experimentat vreodat live, în casa ta, un produs? Find un aparat de bucatarie unic, extrem de
-                      versatil, credem că este cel mai bun și singurul mod de a vedea Thermomix® in actiune. Îti oferă
-                      sansa de a-lîncerca, de a
-                      gusta rezultatele delicioase, de a vedea cum se potriveste in bucătaria ta, de a pune întrebari
-                      consultantului tu și de a primi recomandari.
-                      Dacă esti convins de ceea ce vezi, poti plasa comanda și vei intra n lumea plină de inspiratie a
-                      Thermomix®!
+                      Ai experimentat vreodata în casa ta un aparat de bucatarie unic,un bucatar computerizat cu gatire
+                      ghidata, extrem de versatil, care iti da posibilitatea sa inlocuiesti peste 20 de aparate din
+                      bucataria ta, te ajuta sa-ti faci treaba dar iti si arata cum sa gatesti retete absolut noi tie,
+                      dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
+                      6)?
                     </p>
-                    <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
-                    <ul class="modal-li-align-left">
-                      <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei case</li>
-                      <li>Descopera cum functioneaza produsul si cum se potriveste n bucataria ta</li>
-                      <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat</li>
-                    </ul>
-                  </div>
+                    <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                    <div class="toggle-content pt-3">
+                      <p>
+                        Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
+                        programa o demonstrație la tine acasa in timpul si comfortul casei tale sau un video call pt. Si
+                        mai multa usurinta!
+                      </p>
+                      <p>
+                        Îti oferă sansa de a-l proba, încerca, de a gusta rezultatele delicioase, de a vedea cum se
+                        potriveste in bucătaria ta, de a pune întrebari consultantului tau și de a primi recomandari.
+                        Dacă esti convins de ceea ce vezi, poti cere o demonstratie sau poti plasa o comanda si
+                        reprezentantul tau, in acest caz, eu, vin acasa la tine si te ajut cu instalarea dupa comanda
+                        sau inainte, iar asa vei intra in lumea plină de inspiratie a Thermomix®6!
+                      </p>
+                      <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
+                      <ul class="modal-li-align-left">
+                        <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei casei dv.!</li>
+                        <li>Descopera cum functioneaza produsul, cum arata pe blatul bucatariei tale si nu numai!</li>
+                        <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat care te va
+                          sprijini pe tot parcursul drumului tau si al folosirii aparatului, indiferent de cate ori
+                          doresti sa intrebi ce trebuie sa stii in a fi comod cu Termomixul tau!</li>
+                        </ul>
+                      </div>
+                    </div>
                   <div class="col-md-6 js-scroll slide-right">
                     <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
                   </div>
@@ -243,7 +262,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aproape</button>
             </div>
           </div>
         </div>
@@ -274,7 +293,7 @@
       <a href="demo.html">Book a Demo</a> |
       <a href="buy_thermomix.html">Buy Thermomix</a> |
       <a href="about_me.html">About Me</a> |
-      <a href="contact.html">Contact</a> 
+      <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
