Update to modal romanian text

--- a/about_me.html
+++ b/about_me.html
@@ -162,21 +162,36 @@
             <div class="row">
               <div class="col-md-6 d-flex js-scroll slide-left">
                 <p>
-                  Ai experimentat vreodat live, în casa ta, un produs? Find un aparat de bucatarie unic, extrem de
-                  versatil, credem că este cel mai bun și singurul mod de a vedea Thermomix® in actiune. Îti oferă sansa
-                  de a-lîncerca, de a
-                  gusta rezultatele delicioase, de a vedea cum se potriveste in bucătaria ta, de a pune întrebari
-                  consultantului tu și de a primi recomandari.
-                  Dacă esti convins de ceea ce vezi, poti plasa comanda și vei intra n lumea plină de inspiratie a
-                  Thermomix®!
+                  Ai experimentat vreodata în casa ta un aparat de bucatarie unic,un bucatar computerizat cu gatire
+                  ghidata, extrem de versatil, care iti da posibilitatea sa inlocuiesti peste 20 de aparate din
+                  bucataria ta, te ajuta sa-ti faci treaba dar iti si arata cum sa gatesti retete absolut noi tie,
+                  dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
+                  6)?
                 </p>
-                <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
-                <ul class="modal-li-align-left">
-                  <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei case</li>
-                  <li>Descopera cum functioneaza produsul si cum se potriveste n bucataria ta</li>
-                  <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat</li>
-                </ul>
-              </div>
+                <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                <div class="toggle-content pt-3">
+                  <p>
+                    Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
+                    programa o demonstrație la tine acasa in timpul si comfortul casei tale sau un video call pt. Si
+                    mai multa usurinta!
+                  </p>
+                  <p>
+                    Îti oferă sansa de a-l proba, încerca, de a gusta rezultatele delicioase, de a vedea cum se
+                    potriveste in bucătaria ta, de a pune întrebari consultantului tau și de a primi recomandari.
+                    Dacă esti convins de ceea ce vezi, poti cere o demonstratie sau poti plasa o comanda si
+                    reprezentantul tau, in acest caz, eu, vin acasa la tine si te ajut cu instalarea dupa comanda
+                    sau inainte, iar asa vei intra in lumea plină de inspiratie a Thermomix®6!
+                  </p>
+                  <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
+                  <ul class="modal-li-align-left">
+                    <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei casei dv.!</li>
+                    <li>Descopera cum functioneaza produsul, cum arata pe blatul bucatariei tale si nu numai!</li>
+                    <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat care te va
+                      sprijini pe tot parcursul drumului tau si al folosirii aparatului, indiferent de cate ori
+                      doresti sa intrebi ce trebuie sa stii in a fi comod cu Termomixul tau!</li>
+                    </ul>
+                  </div>
+                </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
               </div>
