--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Alina - Reach Out for Thermomix Support</title>
-  <meta name="description" content="Have questions? Contact Alina for support with Thermomix recipes, tips, or inquiries.">
+  <meta name="description"
+    content="Have questions? Contact Alina for support with Thermomix recipes, tips, or inquiries.">
   <meta name="keywords" content="contact Alina, Thermomix support, recipe inquiries, cooking help">
   <meta property="og:title" content="Contact Alina - Thermomix Support and Inquiries">
-  <meta property="og:description" content="Reach out to Alina for any questions about Thermomix, recipes, or assistance.">
+  <meta property="og:description"
+    content="Reach out to Alina for any questions about Thermomix, recipes, or assistance.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -99,14 +101,16 @@
                     <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" required>
                   </div>
                   <div class="form-group col-md-6 mb-3">
-                    <input type="text" class="form-control" id="phoneNumber" aria-label="phoneNumber" placeholder="Contact Number" required>
+                    <input type="text" class="form-control" id="phoneNumber" aria-label="phoneNumber"
+                      placeholder="Contact Number" required>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <input type="email" class="form-control" id="formControlInput" placeholder="Email" aria-label="email" required>
+                    <input type="email" class="form-control" id="formControlInput" placeholder="Email"
+                      aria-label="email" required>
                   </div>
                   <div class="mb-3">
-                    <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..." aria-label="textarea"
-                      required>
+                    <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
+                      aria-label="textarea" required>
                     </textarea>
                   </div>
                   <div>
@@ -136,20 +140,35 @@
               <div class="row">
                 <div class="col-md-6 d-flex js-scroll slide-left">
                   <p>
-                    Ai experimentat vreodat live, în casa ta, un produs? Find un aparat de bucatarie unic, extrem de
-                    versatil, credem că este cel mai bun și singurul mod de a vedea Thermomix® in actiune. Îti oferă
-                    sansa de a-lîncerca, de a
-                    gusta rezultatele delicioase, de a vedea cum se potriveste in bucătaria ta, de a pune întrebari
-                    consultantului tu și de a primi recomandari.
-                    Dacă esti convins de ceea ce vezi, poti plasa comanda și vei intra n lumea plină de inspiratie a
-                    Thermomix®!
+                    Ai experimentat vreodata în casa ta un aparat de bucatarie unic,un bucatar computerizat cu gatire
+                    ghidata, extrem de versatil, care iti da posibilitatea sa inlocuiesti peste 20 de aparate din
+                    bucataria ta, te ajuta sa-ti faci treaba dar iti si arata cum sa gatesti retete absolut noi tie,
+                    dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
+                    6)?
                   </p>
-                  <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
-                  <ul class="modal-li-align-left">
-                    <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei case</li>
-                    <li>Descopera cum functioneaza produsul si cum se potriveste n bucataria ta</li>
-                    <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat</li>
-                  </ul>
+                  <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                  <div class="toggle-content pt-3">
+                    <p>
+                      Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
+                      programa o demonstrație la tine acasa in timpul si comfortul casei tale sau un video call pt. Si
+                      mai multa usurinta!
+                    </p>
+                    <p>
+                      Îti oferă sansa de a-l proba, încerca, de a gusta rezultatele delicioase, de a vedea cum se
+                      potriveste in bucătaria ta, de a pune întrebari consultantului tau și de a primi recomandari.
+                      Dacă esti convins de ceea ce vezi, poti cere o demonstratie sau poti plasa o comanda si
+                      reprezentantul tau, in acest caz, eu, vin acasa la tine si te ajut cu instalarea dupa comanda
+                      sau inainte, iar asa vei intra in lumea plină de inspiratie a Thermomix®6!
+                    </p>
+                    <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
+                    <ul class="modal-li-align-left">
+                      <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei casei dv.!</li>
+                      <li>Descopera cum functioneaza produsul, cum arata pe blatul bucatariei tale si nu numai!</li>
+                      <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat care te va
+                        sprijini pe tot parcursul drumului tau si al folosirii aparatului, indiferent de cate ori
+                        doresti sa intrebi ce trebuie sa stii in a fi comod cu Termomixul tau!</li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="col-md-6 js-scroll slide-right">
                   <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
@@ -229,13 +248,13 @@
         </a>
       </div>
     </section>
-<!-- Footer -->
+    <!-- Footer -->
     <div class="footer-links">
       <a href="index.html">Home</a> |
       <a href="demo.html">Book a Demo</a> |
       <a href="buy_thermomix.html">Buy Thermomix</a> |
       <a href="about_me.html">About Me</a> |
-      <a href="contact.html">Contact</a> 
+      <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
