--- a/contact.html
+++ b/contact.html
@@ -92,24 +92,24 @@
               <img src="static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
             </div>
             <div class="container-fluid">
-              <form action="book_demo" class="mt-5">
+              <form id="contact-form" action="https://formspree.io/f/xrbgkeoe" method="POST" class="mt-5">
                 <div class="row">
                   <div class="form-group col-md-6  col-sm-12 mb-3">
-                    <input type="text" class="form-control" placeholder="First Name" aria-label="First Name" required>
+                    <input type="text" class="form-control" name="first-name" placeholder="First Name" aria-label="First Name" required>
                   </div>
                   <div class="form-group col-md-6 mb-3">
-                    <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" required>
+                    <input type="text" class="form-control" name="last-name" placeholder="Last Name" aria-label="Last Name" required>
                   </div>
                   <div class="form-group col-md-6 mb-3">
-                    <input type="text" class="form-control" id="phoneNumber" aria-label="phoneNumber"
+                    <input type="text" class="form-control" name="phone-number" id="phoneNumber" aria-label="phoneNumber"
                       placeholder="Contact Number" required>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <input type="email" class="form-control" id="formControlInput" placeholder="Email"
+                    <input type="email" class="form-control" name="email" id="formControlInput" placeholder="Email"
                       aria-label="email" required>
                   </div>
                   <div class="mb-3">
-                    <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
+                    <textarea class="form-control" name="message" id="formControlTextarea" rows="5" placeholder="Leave a message..."
                       aria-label="textarea" required>
                     </textarea>
                   </div>
