--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
               <img src="static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
             </div>
             <div class="container-fluid">
-              <form id="contact-form" action="https://formspree.io/f/xrbgkeoe" method="POST" class="mt-5">
+              <form id="contact-form" method="POST" class="mt-5">
                 <div class="row">
                   <div class="form-group col-md-6  col-sm-12 mb-3">
                     <input type="text" class="form-control" name="first-name" placeholder="First Name" aria-label="First Name" required>
