--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
               <img src="static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
             </div>
             <div class="container-fluid">
-              <form id="contact-form" class="mt-5" name="contact-form" action="/index.html" method="POST" data-netlify=true >
+              <form id="contact-form" class="mt-5" name="contact-form" action="/thank-you.html" method="POST" data-netlify=true >
                 <div class="row">
                   <div class="form-group col-md-6 col-sm-12 mb-3">
                     <input type="text" class="form-control" name="first-name" placeholder="First Name" aria-label="First Name" required>
