--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
       </div>
     </div>
     <!-- End of Modal -->
+    <div class="popup-overlay" id="popup">
+      <div class="popup-content">
+          <button class="popup-close" onclick="closePopup()">&times;</button>
+          <img src="/static/img/tm7.jpeg" alt="Thermomix TM7">
+          <a href="/preorder.html" class="popup-cta">Pre-order Now</a>
+      </div>
+  </div>
   </div>
 
   <!-- Footer -->
