Adding playsinline tag to video

--- a/preorder.html
+++ b/preorder.html
@@ -90,8 +90,8 @@
               </div>
               <div class="col-md-6 d-flex pt-4 js-scroll slide-right">
                 <div class="tm7_video">
-                  <video src="static/video/tm7_video.mp4" style="max-height: 500px" preload="auto" autoplay loop
-                    muted="muted"></video>
+                  <video src="static/video/tm7_video.mp4" style="max-height: 500px"  preload="auto" playsinline autoplay loop
+                    muted></video>
                 </div>
               </div>
             </div>
