--- a/pre_order.html
+++ b/pre_order.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Alina Thermomix - Thermomix TM7 – Next-Gen Smart Cooking">
   <meta property="og:description"
   content="Revolutionize your kitchen with the Thermomix TM7. Experience effortless cooking with advanced smart features, precise temperature control, and an intuitive interface.">
-  <meta property="og:url" content="https://thermomixlondon.com/pre-order">
+  <meta property="og:url" content="https://thermomixlondon.com/pre_order">
   <meta property="og:type" content="website">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
