Removed show class on accordion

--- a/pre_order.html
+++ b/pre_order.html
@@ -214,7 +214,7 @@
                 Why Pre-Order the TM7?
               </button>
             </h2>
-            <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+            <div id="faq1" class="accordion-collapse collapse " data-bs-parent="#faqAccordion">
               <div class="accordion-body">
                 Be among the first to own the revolutionary TM7! With high demand and extended delivery times, placing
                 your pre-order now ensures you receive yours as soon as possible. <strong>Shipping begins in
