changed link from preorder to pre_order.html

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <div class="popup-content">
           <button class="popup-close" onclick="closePopup()">&times;</button>
           <img src="/static/img/tm7.jpeg" alt="Thermomix TM7">
-          <a href="/preorder.html" class="popup-cta">Pre-order Now</a>
+          <a href="/pre_order.html" class="popup-cta">Pre-order Now</a>
       </div>
   </div>
   </div>
