Adding new images and updating css

--- a/about_me.html
+++ b/about_me.html
@@ -56,10 +56,10 @@
   <!-- hero image -->
   <div class="hero-container">
     <div class="hero">
-      <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+      <img src="static/img/about-me.jpeg" alt="about me image" class="img-fluid mx-auto d-block">
     </div>
     <div class="d-flex text-center hero-heading">
-      <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
+      <span>I am Alina Cristescu your Official Thermomix® - <br> Advisor </span>
       <a class="btn btn-success" href="demo.html">Book a Demo</a>
     </div>
   </div>
