--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -61,10 +61,10 @@
         <!-- hero image -->
         <div class="hero-container">
             <div class="hero">
-                <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+                <img src="static/img/buy-thermomix.jpeg" alt="buy thermomix image" class="img-fluid mx-auto d-block">
             </div>
             <div class="d-flex text-center hero-heading">
-                <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
+                <span>I'll guide you through every step of your Thermomix® - <br> Purchase </span>
                 <a class="btn btn-success" href="demo.html">Book a Demo</a>
             </div>
         </div>
