--- a/demo.html
+++ b/demo.html
@@ -56,10 +56,10 @@
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
-        <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+        <img src="static/img/book_demo.jpeg" alt="book a demo image" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
-        <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
+        <span>You Can Choose a Virtual or Face-to-Face - <br> Thermomix® Demo </span>
         <a class="btn btn-success" href="demo.html">Book a Demo</a>
       </div>
     </div>
