--- a/about_me.html
+++ b/about_me.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Alina - Meet Your Thermomix Guide</title>
-  <meta name="description" content="Learn more about Alina, your culinary companion and expert in Thermomix recipes and tips.">
+  <meta name="description"
+    content="Learn more about Alina, your culinary companion and expert in Thermomix recipes and tips.">
   <meta name="keywords" content="About Alina, Thermomix expert, recipe guide, cooking instructor">
   <meta property="og:title" content="About Alina - Your Thermomix Recipe Expert">
-  <meta property="og:description" content="Discover Alina's journey with Thermomix and her passion for helping you create amazing recipes.">
+  <meta property="og:description"
+    content="Discover Alina's journey with Thermomix and her passion for helping you create amazing recipes.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/style.css">
@@ -60,13 +62,13 @@
     </div>
     <div class="d-flex text-center hero-heading">
       <span>I am Alina Cristescu your Official Thermomix® - <br> Advisor </span>
-      <a class="btn btn-success" href="demo.html">Book a Demo</a>
+      <a class="btn btn-success" href="#book-demo">About Me</a>
     </div>
   </div>
 </header>
 <div class="main-container js-scroll">
   <section class="book-demo contact">
-    <div class="card card-top mx-auto text-center">
+    <div id="book-demo" class="card card-top mx-auto text-center">
       <h1 class="p-3 gowun-batang-regular">About Alina Cristescu </h1>
       <div class="card-body">
         <div class="row">
@@ -88,7 +90,8 @@
             </p>
           </div>
           <div class="col-md-6 js-scroll slide-right">
-            <img src="static/img/meet-your-advisor.png" class="img-fluid img-meet-your-advisor img-design" alt="Alina's about profile">
+            <img src="static/img/meet-your-advisor.png" class="img-fluid img-meet-your-advisor img-design"
+              alt="Alina's about profile">
           </div>
         </div>
         <!-- <button class="read-more btn btn-success">Read More</button> -->
@@ -189,9 +192,9 @@
                     <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat care te va
                       sprijini pe tot parcursul drumului tau si al folosirii aparatului, indiferent de cate ori
                       doresti sa intrebi ce trebuie sa stii in a fi comod cu Termomixul tau!</li>
-                    </ul>
-                  </div>
+                  </ul>
                 </div>
+              </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
               </div>
@@ -244,7 +247,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
         </div>
       </div>
     </div>
@@ -268,13 +271,13 @@
       </a>
     </div>
   </section>
-<!-- Footer -->
+  <!-- Footer -->
   <div class="footer-links">
     <a href="index.html">Home</a> |
     <a href="demo.html">Book a Demo</a> |
     <a href="buy_thermomix.html">Buy Thermomix</a> |
     <a href="about_me.html">About Me</a> |
-    <a href="contact.html">Contact</a> 
+    <a href="contact.html">Contact</a>
   </div>
   <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
 </footer>
