Call to action button text content changed

--- a/demo.html
+++ b/demo.html
@@ -271,7 +271,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
           </div>
         </div>
       </div>
