Call to action button text content changed

--- a/pre_order.html
+++ b/pre_order.html
@@ -375,7 +375,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aproape</button>
+            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
           </div>
         </div>
       </div>
