Fixed bug on modal not closing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 
-<body>
+<body class="index-page">
   <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -262,7 +262,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aproape</button>
+              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
             </div>
           </div>
         </div>
@@ -271,7 +271,7 @@
     <!-- End of Modal -->
     <div class="popup-overlay" id="popup">
       <div class="popup-content">
-        <button class="popup-close" onclick="closePopup()">&times;</button>
+        <button class="popup-close" >&times;</button>
         <img src="/static/img/tm7.jpeg" alt="Thermomix TM7">
         <a href="/pre_order.html" class="popup-cta">Pre-order Now</a>
       </div>
