Adjusting media queries for landscape mobile version

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div class="popup-overlay" id="popup">
       <div class="popup-content">
         <button class="popup-close" >&times;</button>
-        <img src="/static/img/tm7.jpeg" alt="Thermomix TM7">
+        <img src="/static/img/tm7.jpeg" class="" alt="Thermomix TM7">
         <a href="/pre_order.html" class="popup-cta">Pre-order Now</a>
       </div>
     </div>
