Updating hero message

--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
         <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
-        <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-        <a class="btn btn-success" href="#book-demo">Get Your Today</a>
+        <span>Have a question or need guidance? Contact me. <br> I'm here to support you! </span>
+        <a class="btn btn-success" href="#book-demo">Get in Touch</a>
       </div>
     </div>
   </header>
