Added disclaimer div

--- a/contact.html
+++ b/contact.html
@@ -261,6 +261,13 @@
       <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+    <!-- Disclaimer Footer -->
+    <div id="disclaimerFooter">
+      <span>
+        This website is operated by Alina Cristescu, an Independent Thermomix® Advisor. It is not affiliated
+        with Vorwerk.
+      </span>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
