--- a/pre_order.html
+++ b/pre_order.html
@@ -13,7 +13,7 @@
   <meta name="author" content="Alina Cristescu">
   <meta property="og:title" content="Alina Thermomix - Thermomix TM7 – Next-Gen Smart Cooking">
   <meta property="og:description"
-  content="Revolutionize your kitchen with the Thermomix TM7. Experience effortless cooking with advanced smart features, precise temperature control, and an intuitive interface.">
+    content="Revolutionize your kitchen with the Thermomix TM7. Experience effortless cooking with advanced smart features, precise temperature control, and an intuitive interface.">
   <meta property="og:url" content="https://thermomixlondon.com/pre_order">
   <meta property="og:type" content="website">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -68,7 +68,7 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The Future of Cooking is Here – <br> Thermomix® TM7 </span>
-        <a href="#pre-order" class="btn btn-success"  >Pre Order Now</a>
+        <a href="#pre-order" class="btn btn-success">Pre Order Now</a>
       </div>
     </div>
   </header>
@@ -90,8 +90,8 @@
               </div>
               <div class="col-md-6 d-flex pt-4 js-scroll slide-right">
                 <div class="tm7_video">
-                  <video src="static/video/tm7_video.mp4" style="max-height: 500px"  preload="auto" playsinline autoplay loop
-                    muted></video>
+                  <video src="static/video/tm7_video.mp4" style="max-height: 500px" preload="auto" playsinline autoplay
+                    loop muted></video>
                 </div>
               </div>
             </div>
@@ -147,8 +147,8 @@
             data-netlify="true">
             <div class="row">
               <div class="form-group col-md-6 col-sm-12 mb-3">
-                <input type="text" class="form-control" name="first-name" placeholder="First Name" aria-label="First Name"
-                  required>
+                <input type="text" class="form-control" name="first-name" placeholder="First Name"
+                  aria-label="First Name" required>
               </div>
               <div class="form-group col-md-6 mb-3">
                 <input type="text" class="form-control" name="last-name" placeholder="Last Name" aria-label="Last Name"
@@ -407,6 +407,13 @@
       <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+    <!-- Disclaimer Footer -->
+    <div id="disclaimerFooter">
+      <span>
+        This website is operated by Alina Cristescu, an Independent Thermomix® Advisor. It is not affiliated
+        with Vorwerk.
+      </span>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
