--- a/thank-you.html
+++ b/thank-you.html
@@ -2,16 +2,18 @@
 <html lang="en">
 
 <head>
-    <title>Alina Thermomix - Thank you for your contact</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thank you for reaching out! Your message has been received, and Alina will get back to you soon.">
-    <meta property="og:title" content="Thank You for Contacting Alina Thermomix!">
-    <meta property="og:description" content="We're excited to help you on your Thermomix journey. Alina will be in touch soon!">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <title>Alina Thermomix - Thank you for your contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Thank you for reaching out! Your message has been received, and Alina will get back to you soon.">
+  <meta property="og:title" content="Thank You for Contacting Alina Thermomix!">
+  <meta property="og:description"
+    content="We're excited to help you on your Thermomix journey. Alina will be in touch soon!">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
@@ -63,7 +65,7 @@
       </div>
     </div>
   </header>
- 
+
 
   <!-- Footer -->
   <footer class="container-fluid text-center py-4">
@@ -90,6 +92,13 @@
       <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+    <!-- Disclaimer Footer -->
+    <div id="disclaimerFooter">
+      <span>
+        This website is operated by Alina Cristescu, an Independent Thermomix® Advisor. It is not affiliated
+        with Vorwerk.
+      </span>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
