resized buttons to fixed 160px width

--- a/about_me.html
+++ b/about_me.html
@@ -62,7 +62,7 @@
     </div>
     <div class="d-flex text-center hero-heading">
       <span>I am Alina Cristescu your Official Thermomix® - <br> Advisor </span>
-      <a class="btn btn-success" href="#book-demo">About Me</a>
+      <a class="btn btn-success equal-width-btn" href="#book-demo">About Me</a>
     </div>
   </div>
 </header>
@@ -171,7 +171,7 @@
                   dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
                   6)?
                 </p>
-                <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                <button class="btn btn-success read-more equal-width-btn">Citeşte Mai Mult</button>
                 <div class="toggle-content pt-3">
                   <p>
                     Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
@@ -247,7 +247,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
+          <button type="button" class="btn btn-success equal-width-btn" data-bs-dismiss="modal">Inchide</button>
         </div>
       </div>
     </div>
