--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -65,7 +65,7 @@
             </div>
             <div class="d-flex text-center hero-heading">
                 <span>I'll guide you through every step of your Thermomix® - <br> Purchase </span>
-                <a class="btn btn-success" href="#book-demo">Get Yours Today</a>
+                <a class="btn btn-success equal-width-btn" href="#book-demo">Get Yours Today</a>
             </div>
         </div>
     </header>
@@ -131,7 +131,7 @@
                                             placeholder="Leave a message..." aria-label="textarea" required></textarea>
                                     </div>
                                     <div>
-                                        <button type="submit" class="btn btn-success">Submit</button>
+                                        <button type="submit" class="btn btn-success equal-width-btn">Submit</button>
                                     </div>
                                 </div>
                             </form>
@@ -234,7 +234,7 @@
                                         Cookidoo(a Termomixului
                                         6)?
                                     </p>
-                                    <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                                    <button class="btn btn-success read-more equal-width-btn">Citeşte Mai Mult</button>
                                     <div class="toggle-content pt-3">
                                         <p>
                                             Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
+                        <button type="button" class="btn btn-success equal-width-btn" data-bs-dismiss="modal">Inchide</button>
                     </div>
                 </div>
             </div>
