--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-        <a class="btn btn-success" href="demo.html">Book a Demo</a>
+        <a class="btn btn-success equal-width-btn" href="demo.html">Book a Demo</a>
       </div>
     </div>
   </header>
@@ -117,7 +117,7 @@
                   Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and discover how the
                   Thermomix can transform your cooking experience today!
                 </p>
-                <a class="btn btn-success" href="demo.html">Book a Demo</a>
+                <a class="btn btn-success equal-width-btn" href="demo.html">Book a Demo</a>
               </div>
             </div>
             <!--Section what comes with thermomix  -->
@@ -146,7 +146,7 @@
                   <em class="cooking-demo">Only available to purchase through a <a href="about_me.html"
                       class="cooking-demo"> Thermomix® Advisor</a></em>
                 </p>
-                <a class="btn btn-success mb-5" href="demo.html">Book a Demo</a>
+                <a class="btn btn-success mb-5 equal-width-btn" href="demo.html">Book a Demo</a>
               </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
@@ -174,8 +174,8 @@
           </video>
           <div id="thermomixButtons" class="buy_thermomix-btn">
             <div>
-              <a class="btn btn-success m-3" href="buy_thermomix.html">Buy - TM6</a>
-              <a class="btn btn-success" href="demo.html">Book a Demo</a>
+              <a class="btn btn-success m-3 equal-width-btn" href="buy_thermomix.html">Order Through Me</a>
+              <a class="btn btn-success equal-width-btn" href="demo.html">Book a Demo</a>
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
                       dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
                       6)?
                     </p>
-                    <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                    <button class="btn btn-success read-more equal-width-btn">Citeşte Mai Mult</button>
                     <div class="toggle-content pt-3">
                       <p>
                         Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
@@ -284,7 +284,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
+              <button type="button" class="btn btn-success equal-width-btn" data-bs-dismiss="modal">Inchide</button>
             </div>
           </div>
         </div>
