--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>Have a question or need guidance? Contact me. <br> I'm here to support you! </span>
-        <a class="btn btn-success" href="#book-demo">Get in Touch</a>
+        <a class="btn btn-success equal-width-btn" href="#book-demo">Get in Touch</a>
       </div>
     </div>
   </header>
@@ -117,7 +117,7 @@
                         placeholder="Leave a message..." aria-label="textarea" required></textarea>
                     </div>
                     <div>
-                      <button type="submit" class="btn btn-success">Submit</button>
+                      <button type="submit" class="btn btn-success equal-width-btn">Submit</button>
                     </div>
                   </div>
                 </form>
@@ -150,7 +150,7 @@
                     dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
                     6)?
                   </p>
-                  <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                  <button class="btn btn-success read-more equal-width-btn">Citeşte Mai Mult</button>
                   <div class="toggle-content pt-3">
                     <p>
                       Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
+            <button type="button" class="btn btn-success equal-width-btn" data-bs-dismiss="modal">Inchide</button>
           </div>
         </div>
       </div>
