--- a/demo.html
+++ b/demo.html
@@ -61,7 +61,7 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>You Can Choose a Virtual or Face-to-Face - <br> Thermomix® Demo </span>
-        <a class="btn btn-success" href="#book-demo">Get Yours Today</a>
+        <a class="btn btn-success equal-width-btn" href="#book-demo">Get Yours Today</a>
       </div>
     </div>
   </header>
@@ -121,7 +121,7 @@
                       placeholder="Leave a message..." aria-label="textarea" required></textarea>
                   </div>
                   <div>
-                    <button type="submit" class="btn btn-success">Submit</button>
+                    <button type="submit" class="btn btn-success equal-width-btn">Submit</button>
                   </div>
                 </div>
               </form>
@@ -194,7 +194,7 @@
                     dupa ce ai comparat, salvat bani si cumparat engredientele din aplicatia Cookidoo(a Termomixului
                     6)?
                   </p>
-                  <button class="btn btn-success read-more">Citeşte Mai Mult</button>
+                  <button class="btn btn-success read-more equal-width-btn">Citeşte Mai Mult</button>
                   <div class="toggle-content pt-3">
                     <p>
                       Termomix 6 este Unic in asta și singurul mod de a vedea Thermomix® in actiune este prin a
@@ -271,7 +271,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Inchide</button>
+            <button type="button" class="btn btn-success equal-width-btn" data-bs-dismiss="modal">Inchide</button>
           </div>
         </div>
       </div>
