Updating nav link from buy to order throught me

--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="demo.html">Book Demo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="buy_thermomix.html">Buy Thermomix</a>
+                            <a class="nav-link active" href="buy_thermomix.html">Order Through Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about_me.html">About Me</a>
@@ -72,7 +72,7 @@
     <div class="main-container">
         <section class="buy-thermoxix js-scroll">
             <div class="card card-top mx-auto">
-                <h1 class="card-title m-3 gowun-batang-regular text-center">How to buy Thermomix</h1>
+                <h1 class="card-title m-3 gowun-batang-regular text-center">How to Order Thermomix</h1>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-6 align-content-center js-scroll slide-left">
@@ -359,7 +359,7 @@
         <div class="footer-links">
             <a href="index.html">Home</a> |
             <a href="demo.html">Book a Demo</a> |
-            <a href="buy_thermomix.html">Buy Thermomix</a> |
+            <a href="buy_thermomix.html">Order Through Me</a> |
             <a href="about_me.html">About Me</a> |
             <a href="contact.html">Contact</a>
         </div>
