--- a/about_me.html
+++ b/about_me.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="demo.html">Book Demo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+            <a class="nav-link" href="buy_thermomix.html">Order Through Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="about_me.html">About Me</a>
@@ -275,7 +275,7 @@
   <div class="footer-links">
     <a href="index.html">Home</a> |
     <a href="demo.html">Book a Demo</a> |
-    <a href="buy_thermomix.html">Buy Thermomix</a> |
+    <a href="buy_thermomix.html">Order Through Me</a> |
     <a href="about_me.html">About Me</a> |
     <a href="contact.html">Contact</a>
   </div>
