--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="demo.html">Book Demo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+              <a class="nav-link" href="buy_thermomix.html">Order Through Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about_me.html">About Me</a>
@@ -320,7 +320,7 @@
     <div class="footer-links">
       <a href="index.html">Home</a> |
       <a href="demo.html">Book a Demo</a> |
-      <a href="buy_thermomix.html">Buy Thermomix</a> |
+      <a href="buy_thermomix.html">Order Through Me</a> |
       <a href="about_me.html">About Me</a> |
       <a href="contact.html">Contact</a>
     </div>
